--- a/style.css
+++ b/style.css
@@ -134,7 +134,44 @@
             background-image: url('images/bg1.jpg');
             background-repeat: no-repeat;
             background-size: cover;
+            animation: imglogin 120s infinite ease;
         }
+
+        @keyframes imglogin {
+            0%{
+              background-image: url('images/bg7.jpg');
+            }
+            10%{
+              background-image: url('images/bg1.jpg');
+            }
+            20%{
+              background-image: url('images/bg2.jpg');
+            }
+            30%{
+              background-image: url('images/bg3.jpg');
+            }
+            40%{
+              background-image: url('images/bg4.jpg');
+            }
+            50%{
+              background-image: url('images/bg5.jpg');
+            }
+            60%{
+              background-image: url('images/bg6.jpg');
+            }
+            70%{
+              background-image: url('images/bg7.jpg');
+            }
+            80%{
+              background-image: url('images/bg8.jpg');
+            }
+            90%{
+              background-image: url('images/bg9.jpg');
+            }
+            100%{
+              background-image: url('images/bg10.jpg');
+            }
+          }
 
         .modal.is-open {
             height: 100%;
